--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -5,43 +5,135 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.tessav.simpletodo.EditItemActivity">
+    <android.support.v7.widget.Toolbar
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        style="@style/Widget.AppCompat.Toolbar"
+        />
 
-    <EditText
-        android:id="@+id/editItem"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="28dp"
-        android:ems="10"
-        android:inputType="textMultiLine"
-        tools:layout_editor_absoluteX="18dp"
-        tools:layout_editor_absoluteY="101dp" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Edit Task"
-        android:textAppearance="@android:style/TextAppearance"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="32dp"
-        android:layout_marginTop="40dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/editItem"
-        android:layout_alignStart="@+id/editItem" />
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#ffc107"
-        android:text="Save"
-        android:onClick="onEditItem"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="173dp"
-        android:layout_marginTop="30dp"
-        android:layout_below="@+id/editItem"
-        android:layout_alignLeft="@+id/editItem"
-        android:layout_alignStart="@+id/editItem" />
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="301dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:text="Task"
+                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionMode.Subtitle"
+                android:textSize="18sp"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="32dp" />
+
+            <EditText
+                android:id="@+id/editItem"
+                android:layout_width="303dp"
+                android:layout_height="50dp"
+                android:layout_below="@+id/textView"
+                android:layout_centerHorizontal="true"
+                android:ems="10"
+                android:inputType="textMultiLine"
+                tools:layout_editor_absoluteX="18dp"
+                tools:layout_editor_absoluteY="101dp" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="304dp"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/editItem"
+                android:layout_alignStart="@+id/editItem"
+                android:layout_below="@+id/editItem"
+                android:layout_marginTop="31dp"
+                android:text="Priority"
+                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionMode.Subtitle"
+                android:textSize="18sp"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="32dp" />
+
+            <RadioGroup
+                android:id="@+id/radioGroup"
+                android:layout_width="306dp"
+                android:layout_height="match_parent"
+                android:layout_alignLeft="@+id/textView2"
+                android:layout_alignStart="@+id/textView2"
+                android:layout_below="@+id/textView2"
+                android:layout_marginTop="19dp">
+
+                <RadioButton
+                    android:id="@+id/high"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/radioGroup"
+                    android:layout_toEndOf="@+id/radioGroup"
+                    android:layout_toRightOf="@+id/radioGroup"
+                    android:layout_weight="1"
+                    android:buttonTint="@android:color/holo_red_light"
+                    android:text="High"
+                    android:textSize="18sp" />
+
+                <RadioButton
+                    android:id="@+id/medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/radioGroup"
+                    android:layout_toEndOf="@+id/radioGroup"
+                    android:layout_toRightOf="@+id/radioGroup"
+                    android:layout_weight="1"
+                    android:buttonTint="@color/colorAccent"
+                    android:text="Medium"
+                    android:textSize="18sp" />
+
+                <RadioButton
+                    android:id="@+id/low"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/radioGroup"
+                    android:layout_toEndOf="@+id/radioGroup"
+                    android:layout_toRightOf="@+id/radioGroup"
+                    android:layout_weight="1"
+                    android:buttonTint="@color/colorPrimary"
+                    android:text="Low"
+                    android:textSize="18sp" />
+            </RadioGroup>
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="303dp"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/radioGroup"
+                android:layout_alignStart="@+id/radioGroup"
+                android:layout_below="@+id/radioGroup"
+                android:layout_marginTop="30dp"
+                android:text="Due Date"
+                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionMode.Subtitle"
+                android:textSize="18sp"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="32dp" />
+
+            <EditText
+                android:id="@+id/duedate_selector"
+                android:layout_width="303dp"
+                android:layout_height="50dp"
+                android:clickable="true"
+                android:focusable="false"
+                android:textSize="18sp" />
+
+
+        </LinearLayout>
+    </ScrollView>
+
 </RelativeLayout>
