--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:backgroundTint="#ffc107"
         android:onClick="onAddItem"
         android:text="Add"
+        android:textSize="16sp"
         tools:layout_editor_absoluteX="280dp"
         tools:layout_editor_absoluteY="447dp" />
 
@@ -36,7 +37,8 @@
         android:layout_toStartOf="@+id/btnAddItem"
         android:ems="10"
         android:hint="Task"
-        android:inputType="text" />
+        android:inputType="text"
+        android:textSize="18sp" />
 
     <ListView
         android:id="@+id/lvItems"
@@ -54,6 +56,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
         android:divider="#ececec"
-        android:dividerHeight="2dp" />
+        android:dividerHeight="2dp"
+        />
 
 </RelativeLayout>
